# kanoon

./: .gitignore  README.md  index.csv  pyproject.toml
app/: main.py  pdf2txt2sents.ipynb
embeddings/example/: chroma.sqlite3
utility/: scraper.py  scraper_deprecated.py
