[tool.poetry]
name = "semantic-law"
version = "0.1.0"
description = "Semantic Search for searching through court cases."
authors = ["Ansh Babbar <ansh28babbar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
selenium = "^4.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
