[tool.poetry]
name = "semantic-law"
version = "0.1.0"
description = "Semantic Search for searching through court cases."
authors = ["Ansh Babbar <ansh28babbar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
pypdf2 = "^3.0.1"
spacy = "^3.7.4"
pandas = "^2.2.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
